--- a/assets/shared/css/footer/footer-1.css
+++ b/assets/shared/css/footer/footer-1.css
@@ -5,8 +5,8 @@
 [data-footer="footer-1"] {
 
 	& .site-footer {
-		padding-bottom: var(--theme-footer-spacing);
-		padding-top: var(--theme-footer-spacing);
+		padding-bottom: var(--theme-block-spacing-huge);
+		padding-top: var(--theme-block-spacing-huge);
 	}
 
 	& .footer-navigation {
