--- a/assets/shared/css/footer/footer-2.css
+++ b/assets/shared/css/footer/footer-2.css
@@ -5,24 +5,25 @@
 [data-footer="footer-2"] {
 
 	& .site-footer {
-		border-top: 1px solid hsl(var(--theme-footer-2-border-top-color), 1);
-		padding-bottom: calc(var(--theme-footer-spacing) * 0.9);
-		padding-top: calc(var(--theme-footer-spacing) * 0.9);
+		padding-top: var(--theme-block-spacing-huge);
+	}
 
-		@media (--large) {
-			padding-bottom: calc(var(--theme-footer-spacing) * 0.66);
-			padding-top: calc(var(--theme-footer-spacing) * 0.66);
+	& .site-footer__inner {
+		padding-bottom: 0.75rem;
+
+		@media (--medium) {
+			padding-bottom: 2rem;
 		}
 	}
 
 	& .site-footer__row {
-		border-bottom: 1px solid hsl(var(--theme-footer-2-border-top-color), 1);
 		border-top: 1px solid hsl(var(--theme-footer-2-border-top-color), 1);
-		margin-top: calc(var(--theme-footer-spacing) * 0.75);
+		margin-top: calc(var(--theme-block-spacing-huge) * 0.75);
 		padding: 1rem 0;
+		text-align: center;
 
-		@media (--large) {
-			margin-top: calc(var(--theme-footer-spacing) * 0.55);
+		@media (--medium) {
+			text-align: left;
 		}
 	}
 
@@ -76,25 +77,33 @@
 	}
 
 	& .social-icons {
-		margin-top: 0.25rem;
+		margin-top: 1rem;
 
-		@media (--medium) {
+		@media (--large) {
 			margin-top: 0;
 		}
 
 		& svg {
-			height: calc(var(--theme-footer-social-icon-size) * 0.66);
+			height: calc(var(--theme-footer-social-icon-size) * 0.8);
+
+			@media (--large) {
+				height: calc(var(--theme-footer-social-icon-size) * 0.66);
+			}
 		}
 
 		& a {
-			padding: calc(var(--theme-footer-social-icon-spacing) * 0.5);
+			padding: calc(var(--theme-footer-social-icon-spacing) * 0.8);
+
+			@media (--large) {
+				padding: calc(var(--theme-footer-social-icon-spacing) * 0.5);
+			}
 		}
 	}
 
 	& .site-info {
 		margin-top: 0.75rem;
 
-		@media (--medium) {
+		@media (--large) {
 			flex: 1 50%;
 			margin-top: 0;
 		}
